gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/import21508.d
version https://git-lfs.github.com/spec/v1
oid sha256:da95215147aaa623673775b433f256d2ffff35ec6227702bb14e20f6b4f5103e
size 49
